[tool.poetry]
name = "repl-nix-careers-website"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_careers_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
consultor = "^0.2.0"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
